# tldraw

./: .babel.config.json  .babelrc  .dockerignore  .eslintcache  .eslintignore  .eslintplugin.js  .eslintrc  .eslintrc.js  .eslintrc.json  .fallowrc.json  .gitignore  .gitpod.yml  .ignore  .mcp.json  .npmignore  .npmrc  .oxfmtrc.json  .oxlintrc.json  .prettierignore  .prettierrc  .yarnrc.yml  3.0-release-notes.md  AGENTS.md  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPANY.md  CONTEXT.md  CONTRIBUTING.md  DOCS_STYLE_GUIDE.md  FAQ.md  IMAGE.md  LICENSE  LICENSE.md  MANAGER_MODULARITY.md  MARKETING_STYLE_GUIDE.md  MCP_APPS_GUIDE.md  PLAN.md  README.md  (+244 more)
.agent/: migrate-to-v5.md
.agents/: skills
.aws/: config
.changeset/: beige-mayflies-crash.md  blue-roses-retire.md  clever-onions-flash.md  config.json  grumpy-turkeys-add.md  poor-zebras-shake.md  pre.json  short-ears-own.md  tidy-ducks-visit.md  warm-drinks-repair.md
.claude/: CLAUDE.md  launch.json  settings.json  settings.local.json
.cursor-plugin/: marketplace.json
.gemini/: settings.json
.github/: FUNDING.yml  VOUCHED.td  dependabot.yml  pull_request_template.md
.husky/: post-checkout  post-commit  post-merge  pre-commit  pre-push
.process-compose/: .version
.turbo/: config.json
__tests__/: README.md  bounds.test.ts  children.test.ts  code.test.ts  coop.test.ts  (+12 more)
apps/tldraw-native/src-tauri/: Cargo.toml  tauri.conf.json
apps/tldraw-native/src-tauri/capabilities/: default.json
apps/tldraw-native/src-tauri/icons/: icon.icns
apps/tldraw-native/src-tauri/src/: lib.rs  main.rs
(+10250 files in other folders)
